# insights-mcp

./: README.md  pyproject.toml
src/insights_mcp/: server.py
